k8s/内网kvm11的k8s证书/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  tls:
    - hosts:
        - admin-hcs.hcs55.com
      secretName: hcs55tls
  rules:
    - host: admin-hcs.hcs55.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-nginx
                port:
                  number: 80
